# Mimir

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
mimir/: answer_provider.py  config.py  credentials.py  desktop.py  dialogue.py  hotkeys.py  live_trace.py  models.py  ollama_fallback.py  preflight_probes.py  profile_context.py  prompts.py  question_detector.py  server.py  session.py  session_answer_flow.py  session_metrics.py  session_summary.py  session_types.py  testing_replay.py
mimir/audio/: __init__.py  applications.py  capture.py  live.py  preflight.py  realtime.py  recordings.py  runtime.py  vad.py
mimir/providers/: __init__.py  base.py  http.py  ollama.py  yandex_ai.py  yandex_realtime.py  yandex_speechkit.py
mimir/stt/: __init__.py  local_vosk.py  speechkit_stream.py
scripts/: check.py  replay_recording.py
src/: App.tsx  api.ts  styles.css  useSessionEvents.ts
src/components/: ConversationSettingsFields.tsx  ModelSettingsFields.tsx  SettingsPanel.tsx  TestingSettingsFields.tsx  UserProfileFields.tsx
tests/: test_audio_pipeline.py  test_call_recordings.py  test_config.py  test_desktop_overlay.py  test_dialogue_memory.py  test_live_trace.py  test_llm_fallback.py  test_model_decision.py  test_ollama_fallback.py  test_preflight.py  test_profile_context.py  test_prompts.py  test_question_detector.py  test_server_stt_wav.py  test_session_controls.py  test_session_metrics.py  test_session_summary.py  test_speechkit_stream.py  test_streaming_parsers.py  test_testing_api.py  test_testing_replay.py  test_yandex_realtime.py  test_yandex_speechkit.py
