[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir"
version = "0.1.0"
description = "Meeting assistant with a Python backend and React frontend"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mimir contributors" }]
dependencies = ["pywebview>=5.4"]

[project.scripts]
mimir = "mimir.server:main"
mimir-desktop = "mimir.desktop:main"

[tool.setuptools.packages.find]
include = ["mimir*"]
